log
Thu 08 Sep 2022 10:58:29 PM UTC: 
 tests:  0|6
total_score: 0/70
337f1d5
Thu 08 Sep 2022 11:06:44 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:55:46: error: expected expression before ‘HashMap’
   55 |     HashMap* new = (HashMap*)calloc(capacity,HashMap);
      |                                              ^~~~~~~
Compilation failed
3f6055f
Thu 08 Sep 2022 11:07:10 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:55:39: error: expected expression before ‘HashMap’
   55 |     HashMap* new = (HashMap*)calloc(1,HashMap);
      |                                       ^~~~~~~
Compilation failed
b2487ee
Thu 08 Sep 2022 11:07:24 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:55:39: error: expected expression before ‘HashMap’
   55 |     HashMap* new = (HashMap*)calloc(1,HashMap*);
      |                                       ^~~~~~~
Compilation failed
482abb9
Thu 08 Sep 2022 11:08:15 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9f7577c
Thu 08 Sep 2022 11:10:18 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
3ac68c0
Fri 09 Sep 2022 12:20:37 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
0ad1688
Fri 09 Sep 2022 12:28:18 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
7b919a9
Fri 09 Sep 2022 12:31:21 PM UTC: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:60:29: error: passing argument 1 of ‘createPair’ makes pointer from integer without a cast [-Werror=int-conversion]
   60 |       Pair * p = createPair(i,NULL);
      |                             ^
      |                             |
      |                             long int
In file included from test.c:4:
hashmap.c:19:27: note: expected ‘char *’ but argument is of type ‘long int’
   19 | Pair * createPair( char * key,  void * value) {
      |                    ~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
b57c037
Fri 09 Sep 2022 12:31:49 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
933b67f
Fri 09 Sep 2022 12:33:33 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e5415d1
Fri 09 Sep 2022 12:35:01 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:58:10: error: ‘i’ undeclared (first use in this function)
   58 |     for (i=0;i<capacity;i++){
      |          ^
hashmap.c:58:10: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
dfa207b
Fri 09 Sep 2022 12:35:11 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
50058d2
Fri 09 Sep 2022 12:36:20 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7b02ab2
Fri 09 Sep 2022 12:37:20 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:61:12: error: expected identifier before ‘*’ token
   61 |       new->*buckets[i]= NULL;
      |            ^
Compilation failed
186834f
Fri 09 Sep 2022 12:37:32 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:61:22: error: invalid operands to binary * (have ‘Pair *’ and ‘void *’)
   61 |       new->buckets[i]*= NULL;
      |                      ^~
Compilation failed
3244622
Fri 09 Sep 2022 12:37:38 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
522eacb
Fri 09 Sep 2022 12:38:21 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:62:7: error: expected ‘,’ or ‘;’ before ‘new’
   62 |       new->buckets[i]= p;
      |       ^~~
hashmap.c:61:14: error: unused variable ‘p’ [-Werror=unused-variable]
   61 |       Pair * p = createPair(NULL,NULL)
      |              ^
cc1: all warnings being treated as errors
Compilation failed
d244f52
Fri 09 Sep 2022 12:38:27 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1c6db84
Fri 09 Sep 2022 12:39:34 PM UTC: 
 hashmap.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
 tests:  0|0
9e4e0e8
Fri 09 Sep 2022 12:41:14 PM UTC: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:63:29: error: expected ‘;’ before ‘new’
   63 |     new->capacity = capacity
      |                             ^
      |                             ;
   64 |     new->current = -1;
      |     ~~~                      
Compilation failed
d097783
Fri 09 Sep 2022 12:41:19 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2c90baa
Fri 09 Sep 2022 12:42:25 PM UTC: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:61:5: error: conversion to non-scalar type requested
   61 |     new->capacity = capacity;
      |     ^~~
hashmap.c:61:5: error: expected ‘,’ or ‘;’ before ‘new’
hashmap.c:60:11: error: unused variable ‘p’ [-Werror=unused-variable]
   60 |     Pair* p = (Pair)calloc(capacity,sizeof(Pair))
      |           ^
hashmap.c:57:10: error: unused variable ‘i’ [-Werror=unused-variable]
   57 |     long i;
      |          ^
cc1: all warnings being treated as errors
Compilation failed
613ea87
Fri 09 Sep 2022 12:42:30 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:60:5: error: conversion to non-scalar type requested
   60 |     Pair* p = (Pair)calloc(capacity,sizeof(Pair));
      |     ^~~~
hashmap.c:60:11: error: unused variable ‘p’ [-Werror=unused-variable]
   60 |     Pair* p = (Pair)calloc(capacity,sizeof(Pair));
      |           ^
hashmap.c:57:10: error: unused variable ‘i’ [-Werror=unused-variable]
   57 |     long i;
      |          ^
cc1: all warnings being treated as errors
Compilation failed
2b6b146
Fri 09 Sep 2022 12:43:10 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
a105a0b
